# FYP-project

./: .gitignore  README.md  example_usage.py  financial_data.ipynb  main.py  pyproject.toml  requirements.txt  stock_list.txt  technical.ipynb  text_correlation.py
docs/: system_approach.md
notebook/: financial_data.ipynb
sentiment/: financial_news.py  nlp_utils.py
src/: financial_news.py  news_sentimental_analysis.py  text_correlation.py
src/ml/: RandomForest.py  evaluation.py  features.py  simulation.py  train.py  universe.py
src/sentiment/: entity_extraction.py  finnhub_news.py  news_sentimental_analysis.py  sentiment_features.py
src/technical/: backtest.py  indicators.py  stock_data.py  strategy.py  trading_signals_model.py
test/: test_compute_indicators.py  test_fetch_stock_data.py  test_fetch_today_news.py
