[project]
name = "fyp-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backtesting>=0.6.5",
    "dotenv>=0.9.9",
    "feedparser>=6.0.12",
    "finnhub-python>=2.4.25",
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "ta-lib>=0.6.8",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "xgboost>=3.2.0",
    "yfinance>=0.2.66",
]
